--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "yiisoft/definitions": "^3.4.1",
         "yiisoft/di": "^1.4.1",
         "yiisoft/error-handler": "^4.3.1",
+        "yiisoft/form-model": "^1.1",
         "yiisoft/html": "^3.12",
         "yiisoft/http": "^1.3",
         "yiisoft/input-http": "^1.0.1",
