--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,17 @@
         "psr/http-message": "^2.0",
         "psr/http-server-handler": "^1.0.2",
         "psr/log": "^3.0.2",
+        "ramsey/uuid": "^4.9",
         "symfony/console": "^7.4.1",
+        "symfony/dotenv": "^8.0",
         "yiisoft/aliases": "^3.1.1",
         "yiisoft/assets": "^5.1.2",
         "yiisoft/config": "^1.6.2",
         "yiisoft/csrf": "^2.2.3",
         "yiisoft/data-response": "^2.1.2",
+        "yiisoft/db": "^2.0",
+        "yiisoft/db-migration": "^2.0",
+        "yiisoft/db-mysql": "^2.0",
         "yiisoft/definitions": "^3.4.1",
         "yiisoft/di": "^1.4.1",
         "yiisoft/error-handler": "^4.3.1",
